--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Setup ECR
       run: |
         # Login to AWS ECR
-        $( aws ecr get-login --no-include-email )
+        $( aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 456403635917.dkr.ecr.us-east-1.amazonaws.com )
 
     - name: Build and tag the image
       run: |
