--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,18 @@ jobs:
       uses: actions/checkout@master
 
     # Add steps here like linting, testing, minification, etc.
-      
-    - name: Setup ECR
-      run: |
-        # Login to AWS ECR
-        $( aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 456403635917.dkr.ecr.us-east-1.amazonaws.com )
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+    
     - name: Build and tag the image
       run: |
         # Build and tag the image
