--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
       - name: aws-example-octodex
-        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
-        image: REGISTRY/IMAGE:TAG
+        image: 456403635917.dkr.ecr.us-east-1.amazonaws.com/example-eks:c3786df269e4564a1a7012f65749ab90be1027c8
+        #image: REGISTRY/IMAGE:TAG
         ports:
         - containerPort: 5000
         resources:
