--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -1,21 +1,13 @@
-name: Check for Open Source Vulnerabilities with Snyk
-on:
-  pull_request:
-    paths:
-    - app/**
-  push:
-    paths:
-    - app/**
-    branches:         # array of glob patterns matching against refs/heads. Optional; defaults to all
-    - master          # triggers on pushes that contain changes in master
+name: Example workflow for Node using Snyk
+on: push
 jobs:
-  oss-security:
+  security:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Check for High Severity OSS Vulnerabilities
-      uses: snyk/actions/node@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --severity-threshold=high --fail-on=upgradable
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
