--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -1,13 +1,40 @@
 name: Example workflow for Node using Snyk
 on: push
+
 jobs:
-  security:
+  build_app:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    - uses: actions/checkout@v2
+    - name: Use Node.js 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+    - run: npm ci
+    - run: npm run build --if-present
+  build_container:
+    needs: [build_app]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build Docker Image
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          args: --severity-threshold=high --workdir=/app
+          push: false
+          load: true
+          tags: goof:PROD         
+      - name: Snyk Container Test
+        continue-on-error: true
+        uses: snyk/actions/docker@master
+        env:
+          SNYK_TOKEN: ${{ Secrets.SNYK_TOKEN }}
+        with:
+          image: goof:PROD
+          args: --file=Dockerfile
+      - name: Upload Container Scan results to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: snyk.sarif
