--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -1,10 +1,12 @@
-name: ci
-
 on:
+  pull_request:
+    paths:
+    - app/**
   push:
-    branches:
-      - 'main'
-
+    paths:
+    - app/**
+    branches:         # array of glob patterns matching against refs/heads. Optional; defaults to all
+    - master          # triggers on pushes that contain changes in master
 jobs:
   docker:
     runs-on: ubuntu-latest
