--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -17,14 +17,13 @@ jobs:
     - name: Build and tag the image
       run: |
         # Build and tag the image
-        docker build app/ \
-          -t app:v1
+        docker build -t your/image-to-test app/
     - name: Snyk Container Test
       continue-on-error: true
       uses: snyk/actions/docker@master
       env:
         SNYK_TOKEN: ${{ Secrets.SNYK_TOKEN }}
       with:
-        image: app:v1
+        image: your/image-to-test
         args: --file=Dockerfile
   
