--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -27,4 +27,4 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         image: your/image-to-test:latest
-        command: code
+        command: code test
