--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -26,4 +26,4 @@ jobs:
         # or you can signup for free at https://snyk.io/login
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        command: code
+        command: monitor
