--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -26,4 +26,5 @@ jobs:
         # or you can signup for free at https://snyk.io/login
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
+        image: your/image-to-test:latest
         command: monitor
