--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -30,5 +30,5 @@ jobs:
         image: your/image-to-test:latest
         args: --severity-threshold=critical
         #json | jq '.vulnerabilities[] |= if(.cvssScore) > 8.0 then "CVSS score \(.cvssScore) \(.id)"|halt_error(1) else "CVSS Score: \(.cvssScore) Vulnerability:\(.id)" end'
-    - if: steps.result.exitcode >0
+    - if: steps.result.exitcode == 0
       run: exit 1
