--- a/.github/workflows/synk.yaml
+++ b/.github/workflows/synk.yaml
@@ -19,7 +19,7 @@ jobs:
       id: result
       # Snyk can be used to break the build when it detects vulnerabilities.
       # In this case we want to upload the issues to GitHub Code Scanning
-      continue-on-error: true
+      continue-on-error: false
       uses: snyk/actions/docker@master
       env:
         # In order to use the Snyk Action you will need to have a Snyk API token.
@@ -30,9 +30,10 @@ jobs:
         image: your/image-to-test:latest
         args: --severity-threshold=high
         #json | jq '.vulnerabilities[] |= if(.cvssScore) > 8.0 then "CVSS score \(.cvssScore) \(.id)"|halt_error(1) else "CVSS Score: \(.cvssScore) Vulnerability:\(.id)" end'
-    #- if: steps.result.exitcode == 0
+    #- if: steps.result.outputs
+    # if: steps.result.exitcode == 0
     #  run: exit 1
-    - if: failure()
-      run: exit 0
-    - if: success()
-      run: exit 1
+    # if: failure()
+    #  run: exit 0
+    # if: success()
+    #  run: exit 1
