--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ env:
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 jobs:
   snyk:
     runs-on: ubuntu-latest
@@ -21,13 +21,14 @@ jobs:
       # In this case we want to upload the issues to GitHub Code Scanning
       continue-on-error: false
       uses: snyk/actions/docker@master
-      #env:
+      env:
         # In order to use the Snyk Action you will need to have a Snyk API token.
         # More details in https://github.com/snyk/actions#getting-your-snyk-token
         # or you can signup for free at https://snyk.io/login
-        #SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        CONTAINER_IMAGE2: $CONTAINER_IMAGE
       with:
-        image: "$CONTAINER_IMAGE"
+        image: "$CONTAINER_IMAGE2"
         args: --severity-threshold=high
 
 
