--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,9 +26,9 @@ jobs:
         # More details in https://github.com/snyk/actions#getting-your-snyk-token
         # or you can signup for free at https://snyk.io/login
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        CONTAINER_IMAGE2: $CONTAINER_IMAGE
+        #CONTAINER_IMAGE2: $CONTAINER_IMAGE
       with:
-        image: $CONTAINER_IMAGE2
+        image: $CONTAINER_IMAGE
         args: --severity-threshold=high
 
 
