--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         #CONTAINER_IMAGE2: $CONTAINER_IMAGE
       with:
-        image: $CONTAINER_IMAGE
+        image: ${{env.CONTAINER_IMAGE}}
         args: --severity-threshold=high
 
 
