--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         #CONTAINER_IMAGE2: $CONTAINER_IMAGE
       with:
+        command: fix
         image: ${{env.CONTAINER_IMAGE}}
         args: --severity-threshold=high
 
