--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,19 @@ env:
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  CONTAINER_IMAGE: example-eks:${{ github.sha }}-${{ github.ref_name }}-${{ date +%s }}
+  CONTAINER_IMAGE: example-eks:${{ github.sha }}-${{ github.ref_name }}-${{ steps.date.outputs.epoctime }}
 
 jobs:
   build-and-push:
     name: Build and deploy
     runs-on: ubuntu-latest
     steps:
-
+    
+    - name: Get the current date/time
+      id: date
+      run: echo "epoctime=$(date +%s)"
+      shell: bash
+      
     - name: Checkout
       uses: actions/checkout@master
 
