--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ env:
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  CONTAINER_IMAGE: example-eks:${{ github.sha }}-${{ github.ref_name }}-${{ env.EPOCTINE }}
+  CONTAINER_IMAGE: example-eks:${{ github.sha }}-${{ github.ref_name }}-$EPOCTIME
 
 jobs:
   build-and-push:
@@ -26,23 +26,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-#     - name: Get the current date/time
-#       id: date
-#       #run: echo "epoctime=$(date +%s)"
-#       run: echo "::set-output name=epoctime::$(date +'%s')"
-#       #run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
-#       shell: bash
-#       env:
-#         EPOCTIME: ${{ steps.date.outputs.EPOCTIME }}
-
-
     - name: Get the current date/time
       id: date
-      run: echo "EPOCTIME=$(date +%s)"
+      #run: echo "epoctime=$(date +%s)"
+      run: echo "EPOCTIME=$(date +%s)" >> ${GITHUB_ENV}
+      #run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
       shell: bash
 
-    - name: Set environment variable
-      run: echo "::set-env name=EPOCTIME::${{ steps.date.outputs.EPOCTIME }}"
+
+
+#     - name: Get the current date/time
+#       id: date
+#       run: echo "EPOCTIME=$(date +%s)"
+#       shell: bash
+
+#     - name: Set environment variable
+#       run: echo "::set-env name=EPOCTIME::${{ steps.date.outputs.EPOCTIME }}"
+      
+
       
     - name: Checkout
       uses: actions/checkout@master
